# MP_percussionModule

./: .gitignore  README.md  arduino_communication_options.md
Arduino_toolController/: Arduino_toolController.ino  lowLevelControl.h  lowLevelControl.ino  upload.bash
debug_log/: correct_2_log  gek_4_log.txt  gekheid_2_log.txt  hondsdolheid_log.txt  kamikaze_3_log.txt  output_info_debug.txt  output_python.txt  referentie_correct_log.txt
docs/: _config.yml  index  index.html  index.md  percussionModule.md  task_manager
docs/Arduino_toolController/: Arduino_toolController.md
docs/Motion/: motion.md  percussion_motion_node.md  rtde_motions.md
docs/Perception/: capture_service_node.md  detectAruco.md  perception  perception.md
docs/Task Manager/: task_manager  task_manager_node
docs/Task_Manager/: task_manager.md  task_manager_node.md  task_system_launch.md
docs/arduino_bridge/: arduino_bridge.md  arduino_bridge_node.md
docs/interfaces/action/: ArduinoCommand.md  ExecuteMotion.md
docs/interfaces/msg/: MarkerDetection.md  Pose6D.md
docs/interfaces/srv/: TriggerCapture.md
src/percussion_arduino_bridge/: package.xml  setup.cfg  setup.py
src/percussion_arduino_bridge/percussion_arduino_bridge/: arduino_bridge_node.py
src/percussion_arduino_bridge/percussion_arduino_bridge/install/: local_setup.sh  setup.sh
src/percussion_arduino_bridge/percussion_arduino_bridge/log/: latest_build
src/percussion_interfaces/: CMakeLists.txt  package.xml
src/percussion_interfaces/action/: ArduinoCommand.action  ExecuteMotion.action  Hammer.action
src/percussion_interfaces/msg/: MarkerDetection.msg
src/percussion_interfaces/srv/: TriggerCapture.srv
src/percussion_motion/: package.xml  setup.cfg  setup.py
src/percussion_motion/percussion_motion/: motion_sequence_alignOnMarker.txt  output_ros.txt  percussion_motion_node.py  rtde_motions.py
src/percussion_perception/: package.xml  setup.cfg  setup.py
src/percussion_perception/percussion_perception/: capture_service_node.py  detectAruco.py
src/percussion_task_manager/: package.xml  setup.cfg  setup.py
src/percussion_task_manager/launch/: task_system.launch.py
src/percussion_task_manager/percussion_task_manager/: capture_service_stub.py  robot_driver_setup.txt  task_manager_node.py
